p2/config/app2-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app2
  namespace: default
spec:
  containers:
  - name: app2
    image: nginx:stable-alpine
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
  volumes:
  - name: volv
    persistentVolumeClaim:
      claimName: local-path-pvc
