p2/config/app3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app3
  namespace: default
spec:
  containers:
  - name: app3
    image: nginx:stable-alpine
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
  volumes:
  - name: volv
    persistentVolumeClaim:
      claimName: local-path-pvc
