p2/config/app3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  type: ClusterIP
  selector:
    app: app-three
  ports:
    - port: 80
