p2/config/services.yaml
# app1
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    app.kubernetes.io/name: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
